Avoid scrollbar caused by dropdown in table

--- a/scss/ui/_tables.scss
+++ b/scss/ui/_tables.scss
@@ -79,3 +79,7 @@
     }
   }
 }
+
+.table-responsive {
+  overflow-x: scroll;
+}
